--- a/pages/admin/components/inspector.html
+++ b/pages/admin/components/inspector.html
@@ -3,12 +3,12 @@
  <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Inspector</title>
  </head>
- <body id="settings">
+ <body id="inspector">
   <div>
-   <h1>Settings</h1>
-   <p>BXU BAS Settings</p>
+   <h4>Inspector</h4>
+   <p>Manage inspector users throughout BXU BAS System</p>
   </div>
  </body>
 </html>
