--- a/pages/admin/components/widgets.html
+++ b/pages/admin/components/widgets.html
@@ -6,7 +6,7 @@
   <title>Document</title>
  </head>
  <body>
-  <div class="widget">
+  <!-- <div class="widget">
    <h3>Recent Violations</h3>
    <table class="table">
     <thead>
@@ -37,6 +37,6 @@
     <li>Inspector A completed 5 inspections</li>
     <li>Inspector B reported 3 violations</li>
    </ul>
-  </div>
+  </div> -->
  </body>
 </html>
