feat: ⚡  layout changes + added modal for adding business violators

--- a/pages/admin/components/inspector.html
+++ b/pages/admin/components/inspector.html
@@ -19,7 +19,7 @@
   </style>
  </head>
  <body id="inspector">
-  <div class="container mt-4">
+  <div class="mt-4">
    <h4>Inspector</h4>
    <p>Manage inspector users throughout BXU BAS System</p>
    <button id="showFormButton" class="btn btn-secondary mb-3" data-bs-toggle="modal" data-bs-target="#addInspectorModal">Add New Inspector</button>
