--- a/pages/inspector/components/profile.html
+++ b/pages/inspector/components/profile.html
@@ -10,10 +10,11 @@
   <p>Manage inspector personal information</p>
   <section class="mt-5">
    <div class="mt-5 p-2 bg-light rounded">
-    <p>Personal Information</p>
+    <h5>Personal Information</h5>
     <div class="mt-5">
-     <label for=""></label>
-     <input type="text">
+     <p>First Name: John</p>
+     <p>Last Name: Doe</p>
+     <p>Email:
     </div>
    </div>
   </section>
