--- a/pages/inspector/components/sidebar.html
+++ b/pages/inspector/components/sidebar.html
@@ -85,16 +85,18 @@
     />
    </div>
    <div class="nav-links">
-    <a href="#" onclick="loadContent('dashboard.html', this)"
+    <a href="#dashboard.html" onclick="loadContent('dashboard.html', this)"
      ><i class="bi bi-speedometer2"></i> Dashboard</a
     >
-    <a href="#" onclick="loadContent('violations.html', this)"
+    <a href="#violations.html" onclick="loadContent('violations.html', this)"
      ><i class="bi bi-exclamation-triangle"></i> Violations</a
     >
-    <a href="#" onclick="loadContent('notifications.html', this)"
+    <a
+     href="#notifications.html"
+     onclick="loadContent('notifications.html', this)"
      ><i class="bi bi-bell"></i> Notifications</a
     >
-    <a href="#" onclick="loadContent('profile.html', this)"
+    <a href="#profile.html" onclick="loadContent('profile.html', this)"
      ><i class="bi bi-person"></i> Profile</a
     >
    </div>
