--- a/pages/inspector/components/violations.html
+++ b/pages/inspector/components/violations.html
@@ -12,7 +12,7 @@
  </head>
  <body>
   <div class="">
-   <h4>Violatiors</h4>
+   <h4>Violators</h4>
    <p>Inspect busienss and create violations for business violators</p>
 
    <button
