--- a/pages/admin/components/sidebar.html
+++ b/pages/admin/components/sidebar.html
@@ -102,9 +102,9 @@
     <a href="#reports.html" onclick="loadContent('reports.html', this)"
      ><i class="bi bi-file-earmark-text"></i> Reports</a
     >
-    <a href="#settings.html" onclick="loadContent('settings.html', this)"
+    <!-- <a href="#settings.html" onclick="loadContent('settings.html', this)"
      ><i class="bi bi-gear"></i> Settings</a
-    >
+    > -->
     <a href="#profile.html" onclick="loadContent('profile.html', this)"
      ><i class="bi bi-person"></i> Profile</a
     >
