--- a/pages/inspector/components/profile.html
+++ b/pages/inspector/components/profile.html
@@ -4,19 +4,58 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Inspector Profile</title>
+  <link
+   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+   rel="stylesheet"
+  />
+  <style>
+   .profile-picture {
+    width: 110px;
+    height: 110px;
+    background-color: #343a40;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 24px;
+   }
+   .custom-width {
+    width: 50px;
+   }
+  </style>
  </head>
  <body>
-  <h4>Inspector Profile</h4>
-  <p>Manage inspector personal information</p>
-  <section class="mt-5">
-   <div class="mt-5 p-2 bg-light rounded">
-    <h5>Personal Information</h5>
-    <div class="mt-5">
-     <p>First Name: John</p>
-     <p>Last Name: Doe</p>
-     <p>Email:
+  <div class="mt-5">
+   <h4>Inspector Profile</h4>
+   <p>Manage inspector personal information</p>
+   <section class="mt-5">
+    <div class="row g-5">
+     <div class="col-md-4">
+      <div class="card p-3 bg-light rounded-4">
+       <h5>Profile Picture</h5>
+       <div class="profile-picture mt-3">JD</div>
+       <div class="mt-4">
+        <button class="w-100 btn btn-secondary rounded-4">
+         Change Password
+        </button>
+       </div>
+      </div>
+     </div>
+     <div class="col-md-8">
+      <div class="card p-3 bg-light rounded-4">
+       <h5>Personal Information</h5>
+       <hr />
+       <div class="mt-4">
+        <p class="h3">First Name: <span>John</span></p>
+        <p class="h3">Last Name: <span>Doe</span></p>
+        <p class="h3">Email: <span>john.doe@example.com</span></p>
+       </div>
+      </div>
+     </div>
     </div>
-   </div>
-  </section>
+   </section>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
  </body>
 </html>
