fix: 🔨 fixed layout issues admin panel

--- a/pages/admin/components/dashboard.html
+++ b/pages/admin/components/dashboard.html
@@ -29,23 +29,18 @@
   <style>
    body {
     font-family: "Poppins", sans-serif !important;
-   }
-   .widget {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
-    height: 120px;
-   }
-   .widget h4 {
-    margin-top: 0;
+    background-color: #eff3fc;
    }
   </style>
  </head>
  <body id="dashboard">
-  <div class="mt-5">
-   <h4>Dashboard</h4>
+  <div class="card">
+   <div class="card-body">
+    <h4>Dashboard</h4>
+    <p></p>
+    Welcome to the BXU BAS Dashboard. Here you can monitor and manage all the
+    activities related to violators and inspectors.
+   </div>
   </div>
   <div class="row mt-4">
    <div class="col-md-4 col-xl-3">
@@ -58,7 +53,7 @@
        </h2>
        <h2>486</h2>
       </div>
-      <p class="m-b-0">Resolved Violations: <span class="f-right">351</span></p>
+      <p class="mt-5">Resolved Violations: <span class="f-right">351</span></p>
      </div>
     </div>
    </div>
@@ -73,7 +68,7 @@
        </h2>
        <h2>351</h2>
       </div>
-      <p class="m-b-0">Total Violators: <span class="f-right">486</span></p>
+      <p class="mt-5">Total Violators: <span class="f-right">486</span></p>
      </div>
     </div>
    </div>
@@ -88,7 +83,7 @@
        </h2>
        <h2>120</h2>
       </div>
-      <p class="m-b-0">Total Violators: <span class="f-right">486</span></p>
+      <p class="mt-5">Total Violators: <span class="f-right">486</span></p>
      </div>
     </div>
    </div>
@@ -103,7 +98,7 @@
        </h2>
        <h2>25</h2>
       </div>
-      <p class="m-b-0">Total Violators: <span class="f-right">486</span></p>
+      <p class="mt-5">Total Violators: <span class="f-right">486</span></p>
      </div>
     </div>
    </div>
