--- a/pages/admin/components/violations.html
+++ b/pages/admin/components/violations.html
@@ -44,10 +44,19 @@
     background-color: #f8f9fa;
     border-top: 1px solid #e9ecef;
    }
+   .card {
+    border-radius: 10px;
+    -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
+    box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
+    border: none;
+    margin-bottom: 30px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+   }
   </style>
  </head>
  <body id="violations">
-  <section class="mt-4">
+  <section class="">
    <div class="card">
     <div class="card-body">
      <h4>Violations</h4>
