--- a/pages/admin/components/notifications.html
+++ b/pages/admin/components/notifications.html
@@ -17,25 +17,45 @@
   <style>
    body {
     font-family: "Poppins", sans-serif !important;
+    background-color: #eff3fc;
+   }
+   .card {
+    border-radius: 10px;
+    -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
+    box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
+    border: none;
+    margin-bottom: 30px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
    }
   </style>
  </head>
  <body id="notifications">
-  <div class="mt-4">
-   <h4>Notifications</h4>
-   <p>Recent notifications will be displayed here.</p>
-   <table class="table table-striped mt-4">
-    <thead>
-     <tr>
-      <th scope="col">No.</th>
-      <th scope="col">Message</th>
-      <th scope="col">Date</th>
-     </tr>
-    </thead>
-    <tbody id="notificationsList">
-     <!-- Notification rows will be added here dynamically -->
-    </tbody>
-   </table>
+  <div class="">
+   <div class="card">
+    <div class="card-body">
+     <h4>Notifications</h4>
+     <p>Recent notifications will be displayed here.</p>
+    </div>
+   </div>
+   <div class="card mt-4">
+    <div class="card-body">
+     <h4>Recent Notifications</h4>
+     <table class="table table-striped mt-4">
+      <thead>
+       <tr>
+        <th scope="col">No.</th>
+        <th scope="col">Message</th>
+        <th scope="col">Date</th>
+       </tr>
+      </thead>
+      <tbody id="notificationsList">
+       <!-- Notification rows will be added here dynamically -->
+       <h1></h1>
+      </tbody>
+     </table>
+    </div>
+   </div>
   </div>
 
   <script>
