--- a/pages/admin/components/profile.html
+++ b/pages/admin/components/profile.html
@@ -13,13 +13,25 @@
   <style>
    body {
     font-family: "Poppins", sans-serif !important;
+    background-color: #eff3fc;
+   }
+   .card {
+    border-radius: 10px;
+    -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
+    box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
+    border: none;
+    margin-bottom: 30px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
    }
   </style>
  </head>
  <body id="profile">
-  <div class="mt-4">
-   <h4>Profile</h4>
-   <p>Manage admin profile</p>
+  <div class="card">
+   <div class="card-body">
+    <h4>Profile</h4>
+    <p>Manage admin profile</p>
+   </div>
   </div>
  </body>
 </html>
