--- a/pages/inspector/components/dashboard.html
+++ b/pages/inspector/components/dashboard.html
@@ -3,11 +3,106 @@
  <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dashboard</title>
+  <title>BXU BAS: Dashboard</title>
+  <link
+   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+   rel="stylesheet"
+  />
+  <link
+   href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
+   rel="stylesheet"
+  />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+   href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+   rel="stylesheet"
+  />
+  <link
+   rel="stylesheet"
+   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.3.0/css/all.min.css"
+   integrity="sha512-UJqci0ZyYcQ0AOJkcIkUCxLS2L6eNcOr7ZiypuInvEhO9uqIDi349MEFrqBzoy1QlfcjfURHl+WTMjEdWcv67A=="
+   crossorigin="anonymous"
+   referrerpolicy="no-referrer"
+  />
+  <link rel="stylesheet" href="/css/admin/dashboard.css" />
+  <style>
+   body {
+    font-family: "Poppins", sans-serif !important;
+    background-color: #eff3fc;
+   }
+  </style>
  </head>
- <body>
-  <div>
-   <h4>Dashboard</h4>
+ <body id="dashboard">
+  <div class="card">
+   <div class="card-body">
+    <h4>Dashboard</h4>
+    <p></p>
+    Welcome to the BXU BAS Dashboard. Here you can monitor and manage all the
+    activities related to violators and inspectors.
+   </div>
   </div>
+  <div class="row mt-4">
+   <div class="col-md-4 col-xl-3">
+    <div class="card bg-c-blue order-card">
+     <div class="card-block">
+      <h6 class="m-b-20">Total Violators</h6>
+      <div class="d-flex align-items-center gap-2">
+       <h2 class="text-right">
+        <i class="fa fa-users f-left text-white"></i>
+       </h2>
+       <h2>486</h2>
+      </div>
+      <p class="mt-5">Resolved Violations: <span class="f-right">351</span></p>
+     </div>
+    </div>
+   </div>
+
+   <div class="col-md-4 col-xl-3">
+    <div class="card bg-c-green order-card">
+     <div class="card-block">
+      <h6 class="m-b-20">Number of Resolved Violations</h6>
+      <div class="d-flex align-items-center gap-2">
+       <h2 class="text-right">
+        <i class="fa fa-check-circle text-white"></i>
+       </h2>
+       <h2>351</h2>
+      </div>
+      <p class="mt-5">Total Violators: <span class="f-right">486</span></p>
+     </div>
+    </div>
+   </div>
+
+   <div class="col-md-4 col-xl-3">
+    <div class="card bg-c-yellow order-card">
+     <div class="card-block">
+      <h6 class="m-b-20">Overdue Violators</h6>
+      <div class="d-flex align-items-center gap-2">
+       <h2 class="text-right">
+        <i class="fa fa-exclamation-triangle text-white"></i>
+       </h2>
+       <h2>120</h2>
+      </div>
+      <p class="mt-5">Total Violators: <span class="f-right">486</span></p>
+     </div>
+    </div>
+   </div>
+
+   <div class="col-md-4 col-xl-3">
+    <div class="card bg-c-pink order-card">
+     <div class="card-block">
+      <h6 class="m-b-20">Number of Inspectors</h6>
+      <div class="d-flex align-items-center gap-2">
+       <h2 class="text-right">
+        <i class="fa fa-user-tie text-white"></i>
+       </h2>
+       <h2>25</h2>
+      </div>
+      <p class="mt-5">Total Violators: <span class="f-right">486</span></p>
+     </div>
+    </div>
+   </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
  </body>
 </html>
