--- a/pages/inspector/components/notifications.html
+++ b/pages/inspector/components/notifications.html
@@ -5,8 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Notifications</title>
  </head>
+ <style>
+  body {
+   font-family: "Poppins", Arial, sans-serif !important;
+   background-color: #f4f4f9;
+   margin: 0;
+   padding: 0;
+  }
+  .card {
+   border-radius: 10px;
+   -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
+   box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
+   border: none;
+   margin-bottom: 30px;
+   -webkit-transition: all 0.3s ease-in-out;
+   transition: all 0.3s ease-in-out;
+  }
+ </style>
  <body id="notifications">
-  <h4>Notifications</h4>
-  <p>Here you will find all your notifications.</p>
+  <div class="card">
+   <div class="card-body">
+    <h4>Notifications</h4>
+    <p>Here you will find all your notifications.</p>
+   </div>
+  </div>
  </body>
 </html>
