--- a/pages/inspector/components/profile.html
+++ b/pages/inspector/components/profile.html
@@ -8,7 +8,28 @@
    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
    rel="stylesheet"
   />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+   href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+   rel="stylesheet"
+  />
   <style>
+   body {
+    font-family: "Poppins", Arial, sans-serif !important;
+    background-color: #f4f4f9;
+    margin: 0;
+    padding: 0;
+   }
+   .card {
+    border-radius: 10px;
+    -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
+    box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
+    border: none;
+    margin-bottom: 30px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+   }
    .profile-picture {
     width: 110px;
     height: 110px;
@@ -26,36 +47,51 @@
   </style>
  </head>
  <body>
-  <div class="mt-5">
-   <h4>Inspector Profile</h4>
-   <p>Manage inspector personal information</p>
-   <section class="mt-5">
-    <div class="row g-5">
-     <div class="col-md-4">
-      <div class="card p-3 bg-light rounded-4">
-       <h5>Profile Picture</h5>
-       <div class="profile-picture mt-3">JD</div>
-       <div class="mt-4">
-        <button class="w-100 btn btn-secondary rounded-4">
-         Change Password
-        </button>
-       </div>
+  <div class="card">
+   <div class="card-body">
+    <h4>Inspector Profile</h4>
+    <p>Manage inspector personal information</p>
+   </div>
+  </div>
+  <section class="mt-5">
+   <div class="row g-5">
+    <div class="col-md-4">
+     <div class="card p-3 bg-light rounded-4 text-center">
+      <h5>Profile Picture</h5>
+      <div class="profile-picture mt-3">JD</div>
+      <div class="mt-4">
+       <button class="w-100 btn btn-secondary rounded-4">
+        Change Password
+       </button>
       </div>
      </div>
-     <div class="col-md-8">
-      <div class="card p-3 bg-light rounded-4">
-       <h5>Personal Information</h5>
-       <hr />
-       <div class="mt-4">
-        <p class="h3">First Name: <span>John</span></p>
-        <p class="h3">Last Name: <span>Doe</span></p>
-        <p class="h3">Email: <span>john.doe@example.com</span></p>
+    </div>
+    <div class="col-md-7">
+     <div class="card p-3 bg-light rounded-4">
+      <h5>Personal Information</h5>
+      <hr />
+      <div class="mt-4">
+       <div class="row">
+        <div class="col-md-6">
+         <p class="h5">First Name:</p>
+         <p class="h6 text-muted">John</p>
+        </div>
+        <div class="col-md-6">
+         <p class="h5">Last Name:</p>
+         <p class="h6 text-muted">Doe</p>
+        </div>
+       </div>
+       <div class="row">
+        <div class="col-md-12">
+         <p class="h5">Email:</p>
+         <p class="h6 text-muted">john.doe@example.com</p>
+        </div>
        </div>
       </div>
      </div>
     </div>
-   </section>
-  </div>
+   </div>
+  </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
  </body>
 </html>
