feat: ⚡ restored type of violation in adding violators

--- a/pages/inspector/components/violations.html
+++ b/pages/inspector/components/violations.html
@@ -50,7 +50,7 @@
    aria-labelledby="violatorModalLabel"
    aria-hidden="true"
   >
-   <div class="modal-dialog modal-lg">
+   <div class="modal-dialog modal-lg modal-dialog-centered"> 
     <div class="modal-content">
      <div class="modal-header">
       <h5 class="modal-title" id="violatorModalLabel">Add New Violator</h5>
